Tue Nov 11 09:33:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/transaction2.c: fix test for Sybase

Mon Nov 10 18:20:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: check proper return code

Fri Nov 07 17:24:12 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: commented unused field

Thu Nov 06 16:55:25 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/connect.c:
	* src/odbc/unittests/connect2.c src/odbc/unittests/error.c:
	* src/odbc/unittests/test64.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/timeout3.c src/odbc/unittests/utf8.c:
	* src/odbc/unittests/utf8_2.c:
	- remove CHK and CheckReturn
	- style update

Thu Nov 06 15:39:50 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: make it compile under VC6

Wed Nov 05 20:21:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/freeclose.c:
	- reduce one round-trip with server
	- improve freeclose test to detect complete rebindings
	- use always cursor results if cursor used

Wed Nov 05 15:54:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- remove warning

Wed Nov 05 15:26:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/toodynamic.c(added) include/tds.h:
	* src/tds/mem.c src/tds/query.c src/tds/unittests/Makefile.am:
	- fix problem for too dynamics reported by Man Min Yan

Tue Nov 04 16:24:24 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/cursor3.c:
	- fix SQLGetData with cursors

Tue Nov 04 15:43:25 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/attributes.c src/odbc/unittests/binary_test.c: